@@ -1,1 +1,1 @@
-DIST android-studio-ide-132.932373-linux.zip 146156911 SHA256 d4c0159a34967e58cd72afe43f63a3b2eac166211e6a1e4460de6d08e2693159 SHA512 a76e993a3ef0078c1aa29580bc800e1009a736842684577d19d4acc52301bdcaf3a7f1e8611f40aabf33041f7497bee27463fda4d6e9e9c0f70064e1439f65d5 WHIRLPOOL c82181e54d939d6b3da364b72ea03039c6e616e59a0ee0ecd60e9544b40eeb28fb48be8c7d0608c3fd85f55d254fb9bd95c4ec5cc3ebd222758429c8b9e1c7da
+DIST android-studio-ide-132.955124-linux.zip 146273455 SHA256 5023efcf123df5623cc6ae8abd835e9f8d4057051899996ed46774676a906322 SHA512 515382b6e43a1b8e96a0a36ee6d9215cfdcf55d4c8eba7b53afca13ce745e4b285f926a47f4b9bdae160ebc1a812485eefebfb93c0e098759f4b4ef7f8cbf829 WHIRLPOOL c65f260edc19b329ec43f493c49a4b615ac018041e80ecae4a9f2ce96ad670c603a822a5266c679f23d999fa52cdb64901064575d648f5e22ef34156e565a2da
